bindings/lisp/doremir/thread/future.lisp

(in-package :audio-engine)
(define-foreign-type thread-future-type () () (:actual-type :pointer))
(define-parse-method thread-future () (make-instance 'thread-future-type))
(defclass thread-future () ((thread-future-ptr :initarg :thread-future-ptr)))
(defmethod translate-to-foreign (x (type thread-future-type)) (slot-value x 'thread-future-ptr))
(defmethod translate-from-foreign (x (type thread-future-type)) (make-instance 'thread-future :thread-future-ptr x))
(defctype thread-future-value ptr)
(defcfun (thread-future-create "doremir_thread_future_create") thread-future (a nullary) (b ptr))
(defcfun (thread-future-pause "doremir_thread_future_pause") :void (a thread-future))
(defcfun (thread-future-resume "doremir_thread_future_resume") :void (a thread-future))
(defcfun (thread-future-is-done "doremir_thread_future_is_done") :boolean (a thread-future))
(defcfun (thread-future-get "doremir_thread_future_get") thread-future-value (a thread-future))
(defcfun (thread-future-cancel "doremir_thread_future_cancel") :void (a thread-future))